methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:21: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsDogHouse'
	override def run() {
                     ^